--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,12 @@ body {
   align-items: center;
 }
 
+
 .site-title {
   font-family: "Josefin sans";
   font-weight: 350;
   font-size: 40px;
+  text-shadow: 0px 2px 10px lightgoldenrodyellow;
 }
 
 /* main */
@@ -41,6 +43,7 @@ main {
 }
 
 .add-ingredient input {
+  transition: transform 0.25s ease-in-out;
   font-family: "Montserrat";
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.192);
@@ -49,6 +52,10 @@ main {
   flex-grow: 1;
   min-width: 150px;
   max-width: 400px;
+}
+
+.add-ingredient input:hover{
+  transform: scale(1.02)
 }
 
 .add-ingredient button {
@@ -67,7 +74,7 @@ main {
 }
 
 .add-ingredient button:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 /* list of ingredients */
