--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@ body {
   align-items: center;
 }
 
-
 .site-title {
   font-family: "Josefin sans";
   font-weight: 350;
@@ -43,7 +42,6 @@ main {
 }
 
 .add-ingredient input {
-  transition: transform 0.25s ease-in-out;
   font-family: "Montserrat";
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.192);
@@ -54,12 +52,7 @@ main {
   max-width: 400px;
 }
 
-.add-ingredient input:hover{
-  transform: scale(1.02)
-}
-
 .add-ingredient button {
-  transition: transform 0.25s ease-in-out;
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.53);
   font-family: "Montserrat";
   border: none;
@@ -73,15 +66,12 @@ main {
   margin-right: 9px;
 }
 
-.add-ingredient button:hover {
-  transform: scale(1.05);
-}
 
 /* list of ingredients */
 
-.list-ingredients li{
-    font-family: 'Montserrat';
-    font-weight: 400;
-    font-size: 14px;
-    padding-top: 5px;
+.list-ingredients li {
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 14px;
+  padding-top: 5px;
 }
