--- a/src/index.css
+++ b/src/index.css
@@ -186,7 +186,8 @@ body::after{
   width: 100%;
   bottom: 0;
   border-radius: 5px 5px 0px 0px;
-  box-shadow: 0px 0px 1px black;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+  rgba(0, 0, 0, 0.3) 0px 1px 3px 1px;
 }
 
 .footer-container h3{
